# cart_opt_ctrl

./: .gitignore  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  data_theta.txt  package.xml  ros_control_plugins.xml  setup.py
cmake/: FindGUROBI.cmake  FindqpOASES.cmake
config/: config.cfg  controller_params.yaml
include/cart_opt_ctrl/: SCurveProfile.hpp  button_comp.hpp  cart_model_solver.hpp  cart_opt_comp.hpp  cart_opt_controller.hpp  cart_opt_ctrl.hpp  cart_problem.hpp  cart_solver.hpp  cart_solver_ceres.hpp  cart_solver_gurobi.hpp  cart_solver_qpoases.hpp  cart_traj_interp.hpp  compute_traj_comp.hpp  impulse_cart_comp.hpp  kpa101.h  lwr_cart_solver.hpp  read_detector.hpp  ros_cart_opt_ctrl.hpp  scurves_traj_comp.hpp  serial.h  solvers.hpp
launch/: run.launch  run_cart_opt_comp.launch  run_iiwa.launch  run_lwr.launch  tuning_w_impulse.launch  usefull variables
models/Seau/: .model.sdf.swp  model.config  model.sdf
models/Seau/meshes/: seau.stl
models/seau/: model.sdf
models/seau/meshes/: seau.stl
scripts/: run.ops  run_cart_opt_comp.ops  run_hw.ops  run_hw_standalone.ops  run_iiwa.ops  run_lwr.ops  run_ros_control.ops  run_sim.ops  run_sim_conman.ops  run_sim_standalone.ops  soft_z.ops  strong_gains.ops  strong_linear.ops  strong_ori.ops  test.ops  tuning_w_impulse.ops
src/: SCurveProfile.cpp  button_comp.cpp  cart_opt_comp.cpp  cart_opt_controller.cpp  cart_opt_ctrl.cpp  cart_traj_interp.cpp  compute_traj_comp.cpp  impulse_cart_comp.cpp  kdl_trajectory_sender.cpp  kpa101.cpp  read_detector.cpp  ros_cart_opt_ctrl.cpp  scurves_traj_comp.cpp  send_simple_traj.cpp
src/cart_opt_ctrl/: back_n_forth.py  go_to_point.py  simple_arc.py  simple_traj_script.py  square.py  try_scurves_traj.py
srv/: GetCurrentPose.srv  UpdateWaypoints.srv
